...
                        onAddressSelected(result)
                    }
                )

                Spacer()
            }
            .navigationTitle("Address")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button("Cancel") {
                        dismiss()
                    }
...
                }
            }
        }
    }

    private func getAppearance() -> AddressWidgetAppearance {
        let text = address == nil ? "Add" : "Save"
        let icon = address == nil ? Image(systemName: "plus.circle") : nil

        var appearance = AddressWidgetAppearance()
        appearance.actionButton = .init(icon: icon, text: text)
        return appearance
    }
...
