...

    private var manualEntryButton: some View {
        HStack {
            Button {
                self.viewModel.addressFormManager.isAddressFormExpanded = true
            } label: {
                Text("Or enter address manually")
                    .customFont(.body3)
                    .foregroundColor(.primaryColor)
                    .underline()
            }
            Spacer()
        }
...
